@@ -1,3 +1,10 @@
+[b][color=orange]v3.30[/color], 29.07.2018[/b][list]
+[*]Added a panel to the chat to place the Voice Buttons.
+[*]-> You have to do the setup for Chat & ActionBars again.
+[*]Fixed some skin related issues/errors.
+[*]Use the new ElvUI MapInfo Table to get coords. Thx Simpy <3.
+[*]Remove the Raid Buff Reminder.[/list]
+
 [b][color=orange]v3.29[/color], 18.07.2018[/b][list]
 [*]Fix a nil error with linking Mythic Keystones.[/list]
 
